fix(App.module.scss): Fix layout spacing

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,6 +10,7 @@
   top: 0;
   padding: $space6;
   text-align: center;
+  box-sizing: border-box;
   background-color: $colorSecondaryDark;
 
   @include smRevertMedia {
